--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
   src: url("https://assets.codepen.io/1480814/films.EXH_____.ttf")
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   min-height: 100vh;
